fix: CodeQL Java version